--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
   <meta charset="utf-8">
   <meta name="description" content=" Content Creator, Web Developer, Streamer and Tiktoker">
   <title>Fulozz™</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <table>
-    <tr>
-      <td><img src="img/F1nXNQFe_400x400-modified.png" alt="Thiago Profile Picture"></td>
-      <td>
-        <h3>
-          <strong>
-           <h1> <p> Thiago "Fulozz"</p></h1>
-            </strong>
+<table>
+<tr>
+<td><img src = "img/F1nXNQFe_400x400-modified.png" alt = "Thiago Profile Picture"></td>
+  <td>
+      <strong>
+        <h1> <p> Thiago "Fulozz" </p></h1>
+      </strong>
   
-    <h4>
-      <Em>
-        <p>
+  <h4>
+    <Em>
+      <p>
           Content Creator, Web Developer, Streamer and Tiktoker.
-        </p>
-        <p>
+      </p>
+      <p>
           I am an new Web deleloper.
-        </p>
-        </em>
-      </h4>
+      </p>
+    </em>
+  </h4>
     
   </td>
 </tr>
