--- a/ContactMe.html
+++ b/ContactMe.html
@@ -4,27 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
-<body>
-<p><strong><a href="index.html"> Back </strong></p></a>
+<body style="background-color: RGBa(0,255,255,0.3);">
+    <p><strong><a href="index.html"> Back </strong></p></a>
     <h1> My contact Datails</h1>
     <p>My functional Address</p>
     <p>1082479123</p>
     <p> email@email.com</p>
+    <br>
     <hr>
-
+   
 <form action="mailto:thiago.andrade46@etec.sp.gov.br" method="post" enctype="text/plain">
-<label>Your Name:</label>
-<input type="text" name="yourName"><br>
-<label>Your Email:</label>
-<input type="email" name="yourEmail" value=""><br>
-<label>Password:<label>
-<input type="password" name=""><br>
-<label>Your Massage:</label><br>
-<textarea name="yourMessage" rows="10" cols="30"></textarea>
-<input type="submit" name="">
-
+<table>
+    <thead>
+<tr>
+    <td>
+    <label>Your Name:</label>
+    <input type="text" name="yourName">
+</tr>
+</thead>
+<br>
+<tbody>
+<tr>
+    <td>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value="">
+    </td>
+</tr>
+</tbody>
+<br>
+<tfoot>
+<tr>
+    <td>
+    <label>Password:<label>
+    <input type="password" name=""><br>
+    </td>
+</tr>
+</tfoot>
+</table>
+<tr>
+    <td>
+        <label>Your Massage:</label><br>
+        <textarea name="yourMessage" rows="10" cols="30"></textarea>
+        <input type="submit" name="">
+    </td>
+</tr>
 
 </form>
 
